--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "unistd.h": "c",
         "stdlib.h": "c",
         "math.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "playlists.h": "c"
     }
 }
